fix: layout problem on footer

--- a/app/client/memo.blog/src/components/layout/footer/index.module.scss
+++ b/app/client/memo.blog/src/components/layout/footer/index.module.scss
@@ -4,24 +4,28 @@
   color: rgba(11, 15, 33, 0.65);
   font-size: 14px;
   font-weight: 500;
-  padding: 10px 100px;
   height: $footerHeight;
 
-  .author {
-    .logo {
-      width: 150px;
-    }
-    .github {
-      a {
-        text-decoration: none;
+  .container {
+    margin: auto;
+    padding: 10px 100px;
+    max-width: $centerWidth;
+    .author {
+      .logo {
+        width: 150px;
+      }
+      .github {
+        a {
+          text-decoration: none;
+        }
       }
     }
-  }
-  .link {
-    .text {
-      margin-bottom: 10px;
-      a {
-        text-decoration: none;
+    .link {
+      .text {
+        margin-bottom: 10px;
+        a {
+          text-decoration: none;
+        }
       }
     }
   }
